--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django==4.1.2
 gunicorn==20.1.0
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pytz==2022.5
 sqlparse==0.4.3
 whitenoise==6.2.0
