--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
+asgiref==3.5.2
+Django==4.1.2
+gunicorn==20.1.0
 python-dotenv==0.21.0
 pytz==2022.5
+sqlparse==0.4.3
+tzdata==2022.5
+whitenoise==6.2.0
